# av-beginner

./: .gitignore  CMakeLists.txt  README.md
base/: CMakeLists.txt
base/common/: common.h  log.h
base/display/: display.cpp  display.h
base/gl-base/: shader.cpp  texture.cpp
base/gl-base/include/: shader.h  texture.h
base/gl_base/: camera.cpp  gl_base.h  mesh.cpp  shader.cpp  texture.cpp
base/gl_base/include/: camera.h  mesh.h  shader.h  texture.h
base/shader_res/: fragment.glsl  fragment2.glsl  vertex.glsl  vertex2.glsl
base/shader_toy/: toyshaders.cpp  toyshaders.h
cmake_utils/: CMakeLists.txt
ffmpeg_tutorial/: CMakeLists.txt
ffmpeg_tutorial/ffmpeg_00_run_ffplay/: CMakeLists.txt  config.h  ffplay.c
ffmpeg_tutorial/ffmpeg_01_print_log/: CMakeLists.txt  ffmpeg_print_log.cpp
ffmpeg_tutorial/ffmpeg_02_file_info/: CMakeLists.txt  ffmpeg_file_info.cpp  fileInfo.cpp  fileInfo.h
ffmpeg_tutorial/ffmpeg_03_open_codec/: CMakeLists.txt  ffmpeg_open_codec.cpp  player.cpp  player.h
ffmpeg_tutorial/ffmpeg_04_decode_video/: CMakeLists.txt  avframe_write.h  decode_write.h  decoder.cpp  decoder.h  ffmpeg_decode_video.cpp
ffmpeg_tutorial/ffmpeg_05_decode_video_queue/: CMakeLists.txt  decoder.cpp  decoder.h  ffmpeg_decode_video_queue.cpp  frameQueue.cpp  frameQueue.h  queue.h
ffmpeg_tutorial/ffmpeg_06_decode_video_render/: CMakeLists.txt  SDLWrapper.cpp  SDLWrapper.h  decoder.cpp  decoder.h  display_.cpp  display_.h  ffmpeg_decode_video_queue.cpp  ffmpeg_decode_video_render.cpp
ffmpeg_tutorial/ffmpeg_07_decode_video_sync/: CMakeLists.txt  decoder.cpp  decoder.h  ffmpeg_decode_video_sync.cpp  queue.h
ffmpeg_tutorial/ffmpeg_base/: CMakeLists.txt  ffmpeg_log.h
ffmpeg_tutorial/ffmpeg_encode_yuv_to_h264/: CMakeLists.txt  fFmpegYuvToH264.cpp  fFmpegYuvToH264.h  ffmpeg_yuv_to_h264.cpp
ffmpeg_tutorial/ffmpeg_encode_yuv_to_h264_new/: CMakeLists.txt  IConvert.cpp  IConvert.h  YuvConvert.cpp  YuvConvert.h  main.cpp
ffmpeg_tutorial/ffmpeg_encode_yuv_to_mp4/: CMakeLists.txt  FFmpegYuvToMp4.cpp  FFmpegYuvToMp4.h  ffmpeg_yuv_to_mp4.cpp
ffmpeg_tutorial/ffmpeg_encode_yuv_to_mp4_new/: CMakeLists.txt  main.cpp
ffmpeg_tutorial/ffmpeg_seek/: CMakeLists.txt  Player.cpp  SeekPlayer.cpp  main.cpp
ffmpeg_tutorial/ffmpeg_seek/include/: Player.h  SDLDef.h  SeekPlayer.h
glad_gl_3_3/include/glad/: glad.h
glad_gl_3_3/src/: glad.c
play_ground/: CMakeLists.txt  play_ground.cpp  thread_demo.cpp  thread_demo.h
resource/image/: image-yuv420p-800x450.yuv
resource/video/: scene-yuv960x540.yuv
sdl_tutorial/: CMakeLists.txt  sdl_template.cpp
sdl_tutorial/sdl_03_display_yuv_image_file/: CMakeLists.txt  sdl_display_yuv_image_file.cpp
sdl_tutorial/sdl_03_read_yuv_and_display/: CMakeLists.txt  sdl_read_yuv_and_display.cpp
sdl_tutorial/sdl_04_display_yuv_video_file/: CMakeLists.txt  sdl_play_yuv_video_file.cpp
sdl_tutorial/sdl_05_play_pcm_audio_file/: CMakeLists.txt  sdl_play_pcm_audio_file_by_pull.cpp  sdl_play_pcm_audio_file_by_push.cpp
shader_tutorial/: CMakeLists.txt
shader_tutorial/shader_01_sdl_with_opengl/: CMakeLists.txt  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  sdl_with_opengl.cpp
shader_tutorial/shader_02_sdl_opengl_draw/: CMakeLists.txt  SDL_glfuncs.h  sdl_opengl_draw.cpp
shader_tutorial/shader_02_shadertoy/: CMakeLists.txt  shadertoy.cpp
